TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fixa dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-03-08 MickeM
 * Major improvments to the WMI command line syntax.
   You can now: list namespaces, list classes, list instances as well as run queries.
   Means you can use NSCLient++ as a almost full featured WMI command line client.
   For details use: nscp wmi --help
	
2012-03-06 MickeM
 * Added "back" WMI Query command line exec like so:
    nscp wmi --exec wmi-query
	CheckWMI Command line syntax:
	Allowed options:
	  -h [ --help ]                        Show help screen
	  -w [ --wmi-query ] arg               Query to execute
	  -l [ --limit ] arg                   Limit number of rows
	  -n [ --namespace ] arg (=root\cimv2) Namespace
	nscp wmi --exec wmi-query --query="Select * from Win32_Process" --limit 2

2012-03-05 MickeM
 * Fixed so time/date comparissons are actually done in UTC (fixed for real this time!)
 * Added a series of testcases for CheckFiles (test_w32_file)

2012-03-04 MickeM
 * Added new dot-net API (Which does not require any strange wrappers)
 * Added brand new sample C# plugin
 * Fixed issue with python unit script loading usig the wrong default options

2012-02-21 MickeM
 * Added new module CauseCrash which has a single command CrashClient to allow the service to be crashed remotly
   *WARNING* Dont use this command, it is for debugging and testing purpouses only
 * Fixed issue with BreakPad which was disabled
 * Fixed some unix issues (sorry but hudson's stopped emailing me again:( )
 * Fixed service --install (now sets correct options)
 * Fixed service --install (now sets description correctly)
 * Fixed log level defined in protobuf (now same as rest of the system)
 * Fixed some issues with the check_nscp command

2012-02-20 MickeM
 * Fixed NRPE buffer issue
 * Added test case for 65K NRPE buffer length as well as 1Mb 