@@ -29,7 +29,7 @@
 		</Upgrade>
 
 		<?if "$(var.arch)" = "x64"?>
-			<Condition Message="x64 bit version not supported (by installer) on Win32 bit platform (get Win32 bit version instead)">NOT VersionNT64</Condition>
+			<Condition Message="x64 bit version not supported on Win32 bit platform (get Win32 instead)">VersionNT64</Condition>
 		<?endif?>
 		<Media Id="1" Cabinet="Product.cab" EmbedCab="yes" CompressionLevel="high" />
 		<Directory Id="TARGETDIR" Name="SourceDir">
@@ -43,13 +43,14 @@
 								Advertise="yes" IconIndex="0" Arguments="test" Description="Run $(var.App.Title) in test mode" />
               <fire:FirewallException Id="FWX1" Name="NSClient++ Monitoring Agent" Scope="any" IgnoreFailure="yes" />
             </File>
+            <RemoveFile Id="PurgeLogFiles" Name="*.log" On="uninstall" />
             <ServiceInstall Id="SWCNSCP"
 							Name="[SERVICE_NAME]" DisplayName="$(var.App.Title) ($(var.arch))"
 							Type="ownProcess" Start="auto" ErrorControl="normal" Interactive="no"
 							Description="Monitoring agent for nagios (and others) used to respond to status queries"
 							Arguments="service --run --name [SERVICE_NAME]">
-				<ServiceDependency Id="Tcpip" />
-			</ServiceInstall>
+				      <ServiceDependency Id="Tcpip" />
+			      </ServiceInstall>
             <ServiceControl Id="StartSWCNSCP" Name="[SERVICE_NAME]" Start="install" Stop="both" Wait="yes" Remove="uninstall" />
             <RemoveFolder Id="RemoveMenuShortcuts" Directory="ProgramMenuDir" On="uninstall" />
           </Component>
@@ -76,9 +77,18 @@
 						</File>
 						-->
             <File Id="ErrorReporter" Name="reporter.exe" DiskId="1" Source="$(var.Source)/reporter.exe" Vital="yes" />
-            <!--
-							<File Id="NSClientINI" Name="NSC.ini" LongName="NSC.ini" DiskId="1" Source="$(var.Path.ini)/NSC.ini" Vital="yes"/>
-						-->
+          </Component>
+          <Component Id="SampleConfigUser" Guid="AA636DB0-A0B9-4dd2-B74C-$(var.Postfix.GUID)" Win64="$(var.Win64)">
+            <File Id="NSClientINIUser" Name="nsclient.ini" DiskId="1" Source="$(var.Path.ini)/nsclient.dist" Vital="no" PatchIgnore="yes">
+              <Permission User="Everyone" GenericRead="yes" Read="yes" GenericWrite="yes" Write="yes"/>
+            </File>
+            <RemoveFile Id="PurgeConfigFilesUser" Name="*.ini" On="uninstall" />
+            <Condition>INSTALL_SAMPLE_CONFIG AND USER_WRITABLE_CONFIG</Condition>
+          </Component>
+          <Component Id="SampleConfig" Guid="AAA36DB0-A0B9-4dd2-B74C-$(var.Postfix.GUID)" Win64="$(var.Win64)">
+            <File Id="NSClientINI" Name="nsclient.ini" DiskId="1" Source="$(var.Path.ini)/nsclient.dist" Vital="no" PatchIgnore="yes" />
+            <RemoveFile Id="PurgeConfigFiles" Name="*.ini" On="uninstall" />
+            <Condition>INSTALL_SAMPLE_CONFIG AND NOT USER_WRITABLE_CONFIG</Condition>
           </Component>
           <Component Id="RandomFiles" Guid="B4636DB0-A0B9-4dd2-B74C-$(var.Postfix.GUID)" Win64="$(var.Win64)">
             <File Id="Changelog" Name="changelog.txt" DiskId="1" Source="$(var.Source)/changelog" Vital="no" />
@@ -235,8 +245,10 @@
 				<ComponentRef Id="MainClient" />
 				<ComponentRef Id="Shortcuts" />
 				<ComponentRef Id="Helpers" />
-				<ComponentRef Id="RandomFiles" />
-			</Feature>
+        <ComponentRef Id="RandomFiles" />
+        <ComponentRef Id="SampleConfigUser" />
+        <ComponentRef Id="SampleConfig" />
+      </Feature>
 			<Feature Id="Documentation" Title="Documentation (pdf)" Description="Documentation for NSClient++ and how to use it from Nagios" Level="1">
 				<ComponentRef Id="NagiosDocumentation" />
 				<ComponentRef Id="ReferenceDocumentation" />
@@ -278,23 +290,29 @@
 
 		<CustomAction Id='ImportConfig'			BinaryKey='InstallerHelper' DllEntry='ImportConfig'			Impersonate='yes' Execute="immediate" Return="check" />
 		<CustomAction Id='ScheduleWriteConfig'	BinaryKey='InstallerHelper' DllEntry='ScheduleWriteConfig'	Impersonate='yes' Execute="immediate" Return="check" />
-		<CustomAction Id="ExecWriteConfig"		BinaryKey="InstallerHelper" DllEntry="ExecWriteConfig"		Impersonate="no" Execute="deferred" Return="check"  />
+		<CustomAction Id="ExecWriteConfig"		BinaryKey="InstallerHelper" DllEntry="ExecWriteConfig"	Impersonate="no" Execute="deferred" Return="check"  />
 
-		<CustomAction Id='NeedUninstall'		BinaryKey='InstallerHelper' DllEntry='NeedUninstall'		Impersonate='yes' Execute="immediate" Return="check" />
+		<CustomAction Id='NeedUninstall'		BinaryKey='InstallerHelper' DllEntry='NeedUninstall'	Impersonate='yes' Execute="immediate" Return="check" />
 		<CustomAction Id="PreventDowngrading"	Error="Newer version already installed." />
+
+
+    <CustomAction Id="GenConfig.Command" Property="GenConfig" Value="&quot;[#NSClientEXE]&quot; settings --generate ini"/>
+    <CustomAction Id="GenConfig" BinaryKey="WixCA" DllEntry="CAQuietExec" Impersonate="no" Return="ignore" Execute="deferred"/>
 
 		<Binary Id='InstallerHelper' SourceFile='$(var.Helpers)/main_dll.dll' />
 
-		<InstallExecuteSequence>
+    <InstallExecuteSequence>
 			<RemoveExistingProducts After='InstallInitialize'/>
 			<Custom Action="PreventDowngrading" After="FindRelatedProducts">NEWAPPFOUND</Custom>
-			<Custom Action="ScheduleWriteConfig" After='InstallFiles' />
+      <Custom Action="ScheduleWriteConfig" After="InstallFiles">NOT REMOVE</Custom>
+      <Custom Action="GenConfig.Command" After="ScheduleWriteConfig">NOT REMOVE AND INSTALL_SAMPLE_CONFIG = 1</Custom>
+      <Custom Action="GenConfig" After="GenConfig.Command">NOT REMOVE AND INSTALL_SAMPLE_CONFIG = 1</Custom>
 		</InstallExecuteSequence>
 
 		<InstallUISequence>
 			<Custom Action="PreventDowngrading" After="FindRelatedProducts">NEWAPPFOUND</Custom>
-			<Custom Action="NeedUninstall" After="FindRelatedProducts" >1</Custom>
-			<Custom Action="ImportConfig" After="CostFinalize" >1</Custom>
+			<Custom Action="NeedUninstall" After="FindRelatedProducts">1</Custom>
+			<Custom Action="ImportConfig" After="CostFinalize">NOT REMOVE</Custom>
 		</InstallUISequence>
 
 		<Property Id="ALLUSERS">
